[tool.poetry]
name = "nano-watch"
version = "0.1.0"
description = ""
authors = ["Mohammad Taheri <admirer135@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
holidays = "^0.66"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
